@@ -2,6 +2,16 @@
 
         Reviewed by darin.
 
+        * ksvg2/impl/SVGScriptElementImpl.cpp:
+        (SVGScriptElementImpl::executeScript):
+        Added necessary Interpreter::lock()/unlock() calls to prevent
+        assertion failure when loading SVGs with JavaScript.
+        http://bugzilla.opendarwin.org/show_bug.cgi?id=4580
+
+2005-08-22  Eric Seidel  <eseidel@apple.com>
+
+        Reviewed by darin.
+
         * WebCore.xcodeproj/project.pbxproj:
         Applied Darin's nmedit workaround/build-speedup to WebCore+SVG.
         http://bugzilla.opendarwin.org/show_bug.cgi?id=4577
